0.2.0
   Added support for Google Auth.

   Added support for a pluggable caching system. Now supports
   the file system and memcached.

   Added experimental support for HMACDigest.  

   Added httplib2.debuglevel which turns on debugging. 

0.1.1

    Fixed several bugs raised by James Antill:
    1. HEAD didn't get an Accept: header added like GET.
    2. HEAD requests did not use the cache.
    3. GET requests with Range: headers would erroneously return a full cached response.
    4. Subsequent requests to resources that had timed out would raise an exception.
    And one feature request for 'method' to default to GET.

    Xavier Verges Farrero supplied what I needed to make the 
    library work with Python 2.3.

    I added distutils based setup.py.

0.1 Rev 86 
    
    Initial Release
